# lib-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml.example  pyproject.toml  requirements.txt
launchctl/: com.user.bookpipeline.poller.plist  com.user.bookpipeline.watcher.plist
maps/: burke-reflections-on-the-revolution.json  nisbet-quest-for-community.json
pipeline/: __main__.py  batch.py  cleanup.py  config.py  embed.py  epub.py  fanout.py  kindle.py  pdf_cloud.py  pdf_local.py  pdf_ocr.py  queue.py  triage.py  watcher.py
scripts/: 01_convert_epubs.py  02_generate_maps.py  03_build_index.py  04_query.py  shared.py
tests/: test_core.py  test_integration.py
